# wordle

./: .gitignore  README.md  wordle.cpp  wordle_play.cpp
dictionaries/: de_allowed.txt  de_correct.txt
projects/Cpp_meson/: README.md  meson.build
projects/Cpp_meson/data/: at_allowed.txt  at_correct.txt
projects/Cpp_meson/src/app/: meson.build  wordle.cpp
projects/Cpp_meson/src/lib/: meson.build
projects/Cpp_meson/src/lib/util/parallel/: for_each.h
projects/Cpp_meson/src/lib/wordle/: AlphabetMap.h  IsSingleWordValid.h  IsWordValid.h  State.cpp  State.h  Word.cpp  Word.h  stateFromWord.h
projects/Cpp_meson/src/parallel/: for_each.h
projects/Cpp_meson/src/test/: AlphabetMapTest.cpp  IsWordValidTest.cpp  WordTest.cpp  meson.build  parseDict.cpp  parseDictTest.cpp  stateFromWordTest.cpp  wordle_util.h
projects/Cpp_meson/src/wordle/: meson.build  parseDict.cpp  parseDict.h  wordle.cpp
projects/Cpp_premake/: .gitignore  README.md  premake5.lua  wordle.cpp
projects/Cpp_premake/src/: wordle.cpp
projects/Cpp_premake/src/test/: parseDict.cpp
projects/Cpp_premake/src/wordle/: Word.h  parseDict.h
projects/Cpp_simple/: README.md  wordle.cpp
src/Cpp/: wordle.cpp
src/Cpp_simple/: wordle_play.cpp
